[project]
name = "c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyswarms>=1.3.0",
    "pywavelets>=1.9.0",
    "ruff>=0.14.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tensorflow>=2.20.0",
    "yfinance>=1.1.0",
]
